feat: Implementa o uso de variáveis de ambiente para credenciais
Introduz o uso de um arquivo .env para gerenciar as credenciais do banco de dados de forma segura. O database.py agora lê as configurações a partir do .env, evitando que senhas e dados sensíveis sejam expostos no código. Adicionado .gitignore para garantir que o .env não seja enviado ao repositório.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-streamlit
-pandas
 ollama
-pytesseract
-Pillow
-PyMuPDF
+pandas
 openpyxl
+streamlit
 plotly
+pytesseract
+PyMuPDF
 xlsxwriter
+mysql-connector-python
+python-dotenv
